--- a/wechat-app/src/main/resources/application.properties
+++ b/wechat-app/src/main/resources/application.properties
@@ -6,9 +6,9 @@ server.port=8080
 #logging.file.path=./logs
 # Mysql数据库
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://denson.xyz:3306/monitor?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
+spring.datasource.url=jdbc:mysql://localhost:3306/wechat?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=CTT
 spring.datasource.username=root
-spring.datasource.password=Zhou0.00
+spring.datasource.password=123456
 # 配置连接池信息
 #spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
